--- a/assets/css/netCompare.css
+++ b/assets/css/netCompare.css
@@ -30,7 +30,7 @@
 }
 .location{
   position:absolute;
-  background-image: url("../location.png");
+  background-image: url("../img/location.png");
   left:30px;
   top:100px;
   width: 30px;
@@ -38,7 +38,7 @@
 }
 .location2{
   position:absolute;
-  background-image: url("../location.png");
+  background-image: url("../img/location.png");
   left:30px;
   top:100px;
   width: 30px;
